--- a/web-ring-index.html
+++ b/web-ring-index.html
@@ -15,17 +15,18 @@
 <body>
         <main>
          <div class="nav-bar">
-             <h2>New Jeans Wiki </h2>
+             <h2>New Jeans Wiki</h2>
          </div> 
              
         <div class="img-holder">
               <div class="item">
                   <img src="images/dani2.jpg" alt="Dani">
+                  <p>tyitlee</p>
               </div>
               <div class="item">
                   <img src="images/hanni.jpg" alt="Hanni">
               </div>
-              <div class="itme">
+              <div class="item">
                   <img src="images/heyin.jpg" alt="Hyein">
               </div>
               <div class="item">
