--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     
         <div class="about"> <!--   class = .    -->
             <h3> About New Jeans</h3>
-            <p> New Jeans is a K-pop group that makes music that blends genres like synth-pop, hip hop, and R&B, with influences from the 1990s and 2000s </p>
+            <p> New Jeans is a K-pop group that has won the hearts of fans from all over the world. Their music blends genres like synth-pop, hip hop, and R&B, with influences from the 1990s and 2000s. </p>
             <p> New Jeans was formed under HYPE Entertainment under the label ADOR. Consisting of 5 members, the group debuted in 2022 with the song "Attention."</p>
             <p> Some members have contributed in the writing process of their song releases. </p>
             </div>
 
         <div class="awards">
-            <h3 class=> Awards</h3>
-            <img src="images/awards.png">
+            <h3> Awards</h3>
+            <div class="img-wrapper"> <img src="images/awards.png"> </div>
             <br>
             <br>
         </div>
@@ -74,7 +74,8 @@
         </div>
        
         <div class="externallink">
-            <h3 class="hover"></h3>><a href="index.html" target="_blank"> check out more artists </a></h3>
+            <h3 class="hover"><a href="index.html" target="_blank">  Previous </a></h3>
+            <h3 class="hover"><a href="index.html" target="_blank"> Next </a></h3>
         </div>
     </main>
    
