--- a/index.html
+++ b/index.html
@@ -60,7 +60,48 @@
 
         <div class="awards">
             <h3> Awards</h3>
-            <div class="img-wrapper"> <img src="images/awards.png"> </div>
+            <!-- <div class="img-wrapper"> <img src="images/awards.png"> </div>  -->
+            <p> MAMA Award for Song of the Year
+               <br> 2023 · Ditto</p>
+            <br>
+            <p> MAMA Award for Best Female Group
+                <br> 2023</p>   
+            <br>
+            <p> Seoul Music Awards Rookie Award
+               <br> 2023</p> 
+            <br>  
+            <p>MAMA Award for Best Dance Performance
+               <br> 2023 · Ditto</p>
+            <br> 
+               <p> Japan Record Award for Excellent Work
+                <br> 2023 · Ditto</p>   
+            <br>
+                <p>Japan Record Special Award
+               <br> 2023</p>   
+            <p> MAMA Award for Artist of the Year
+                <br> 2023</p> 
+            <br>
+            <p> Golden Disk Award Rookie Artist Award
+                <br> 2023</p>
+            <br>
+            <p> Billboard Music Award for Top Global K-Pop Artist
+                <br> 2023</p>
+            <br>
+            <p> Golden Disc Award Song Division
+                <br> 2024, 2023 · Ditto, Attention</p>
+            <br>
+            <p> Seoul Music Awards Bonsang Awards
+                <br> 2024</p>
+            <br>
+            <p> Golden Disc Award Song of the Year
+                <br> 2024 · Ditto</p>
+            <br>
+            <p> Seoul Music Awards Record of the Year in Digital Release
+                <br> 2024 · OMG</p>
+            <br>
+            <p> iHeartRadio Music Award for Best New K-pop Artist
+                <br> 2024
+            </p>
             <br>
             <br>
         </div>
@@ -74,8 +115,8 @@
         </div>
        
         <div class="externallink">
-            <h3 class="hover"><a href="index.html" target="_blank">  Previous </a></h3>
-            <h3 class="hover"><a href="index.html" target="_blank"> Next </a></h3>
+            <h3 class="hover"><a href="index.html" target="_blank"> ← Previous </a></h3>
+            <h3 class="hover"><a href="index.html" target="_blank"> Next →</a></h3>
         </div>
     </main>
    
