--- a/index.html
+++ b/index.html
@@ -58,15 +58,19 @@
             <p> Some members have contributed in the writing process of their song releases. </p>
             </div>
 
-        <div class="awards1">
+        <div class="awards">
             <h3> Awards</h3>
             <!-- <div class="img-wrapper"> <img src="images/awards.png"> </div>  -->
-            <p> MAMA Award for Song of the Year
+            <div class="text">
+                <p> MAMA Award for Song of the Year
                <br> 2023 · Ditto</p>
+            </div>
             <br>
+            <div class="text">
             <p> MAMA Award for Best Female Group
                 <br> 2023</p>   
             <br>
+            </div>
             <p> Seoul Music Awards Rookie Award
                <br> 2023</p> 
             <br>  
@@ -81,10 +85,7 @@
             <br>
             <p> MAMA Award for Artist of the Year
                 <br> 2023</p> 
-            
-            </div>
-
-            <div class="awards2">   
+                         
             <p> Golden Disk Award Rookie Artist Award
                 <br> 2023</p>
             <br>
